index page button added

--- a/index.html
+++ b/index.html
@@ -12,4 +12,11 @@
       Next - 7-2 CSS Overflow visible, hidden, scroll, text-overflow, ellipsis
     </h3>
   </body>
+  <footer>
+    <!-- HTML Button !-->
+    <button class="button-64" role="button">
+      <a href="overflow.html">Transition</a>
+    </button>
+    <br />
+  </footer>
 </html>
