--- a/animation.html
+++ b/animation.html
@@ -15,6 +15,9 @@
         border-radius: 25px;
         background-color: red;
       }
+      .bat {
+        transition: transform 10s;
+      }
       .field:hover .bat {
         transform: rotate(-60deg);
         transform-origin: top right;
