--- a/transform.html
+++ b/transform.html
@@ -36,6 +36,12 @@
       }
     </style>
   </head>
+  <header>
+    <h2>7-3 Transform element using rotate scale translate</h2>
+    <p>
+      This property allows you to rotate, scale, move, skew, etc., elements.
+    </p>
+  </header>
   <body>
     <ul>
       <li>scale = zoom in out kora (0.75)</li>
