--- a/transition.html
+++ b/transition.html
@@ -22,6 +22,23 @@
     </style>
   </head>
   <body>
+    <h1>7-4 Introduction to CSS animation Transition</h1>
+    <p>
+      CSS transitions allows you to change property values smoothly, over a
+      given duration.
+    </p>
+    <section class="code">
+      <pre>
+            <code>
+                div {
+                    width: 100px;
+                    height: 100px;
+                    background: red;
+                    transition: width 2s;
+                  }
+            </code>
+          </pre>
+    </section>
     <h1>Transition - slowly</h1>
     <p>div { transition: property> duration> timing-function> delay>; }</p>
     <ul>
