module 7 finished with notes

--- a/css-specificity.html
+++ b/css-specificity.html
@@ -25,7 +25,7 @@
     <br />
     <!-- HTML Button !-->
     <button class="button-64" role="button">
-      <a href="devtool.html">Dev Tool</a>
+      <a href="dev-tool.html">Dev Tool</a>
     </button>
   </footer>
 </html>
