--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milestone Two</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>7-1 Optimize images, types of images, svg, png, jpg, Sprite</h1>
@@ -15,7 +16,7 @@
   <footer>
     <!-- HTML Button !-->
     <button class="button-64" role="button">
-      <a href="overflow.html">Transition</a>
+      <a href="overflow.html">Overflow</a>
     </button>
     <br />
   </footer>
