--- a/overflow.html
+++ b/overflow.html
@@ -29,6 +29,8 @@
     </style>
   </head>
   <body>
+    <h2>7-2 CSS Overflow visible, hidden, scroll, text-overflow, ellipsis</h2>
+
     <h1>The types of Overflow in CSS</h1>
     <ul>
       <li>Visible</li>
