--- a/transform.html
+++ b/transform.html
@@ -68,11 +68,11 @@
   <footer>
     <!-- HTML Button !-->
     <button class="button-64" role="button">
-      <a href="transform.html">Transform</a>
+      <a href="overflow.html">Overflow</a>
     </button>
     <!-- HTML Button !-->
     <button class="button-64" role="button">
-      <a href="transition.html">Animation</a>
+      <a href="transition.html">Transition</a>
     </button>
   </footer>
 </html>
