--- a/animation.html
+++ b/animation.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transition Animation</title>
+    <link rel="stylesheet" href="style.css" />
     <style>
       .field {
         border: 1px solid;
