--- a/css-ball-bounce.html
+++ b/css-ball-bounce.html
@@ -5,9 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Next</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      @keyframes ping-pong {
+        0% {
+          top: 0;
+          left: 0;
+          background-color: yellow;
+        }
+
+        50% {
+          top: 200px;
+          background-color: red;
+        }
+
+        100% {
+          top: 0;
+          left: 700px;
+          background-color: yellow;
+        }
+      }
+
+      .stage {
+        width: 800px;
+        height: 300px;
+        background-color: lightgrey;
+        border: 5px solid royalblue;
+      }
+
+      .stage:hover .ball {
+        animation: ping-pong 4s ease-in-out 1s infinite alternate;
+      }
+
+      .ball {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: red;
+        position: relative;
+      }
+    </style>
   </head>
   <body>
     <h1>7-6 (optional) Css animation and bounce effect with balls</h1>
+    <h2>I am exploring Animation</h2>
+    <div class="stage">
+      <div class="ball"></div>
+    </div>
   </body>
   <footer>
     <!-- HTML Button !-->
