--- a/dev-tool.html
+++ b/dev-tool.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dev tool</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>7-9 Explore Devtool Element tab for Style Debugging</h1>
+  </body>
+  <footer>
+    <!-- HTML Button !-->
+    <button class="button-64" role="button">
+      <a href="css-specificity.html">specificity</a>
+    </button>
+    <br />
+    <!-- HTML Button !-->
+    <button class="button-64" role="button">
+      <a href="summary.html">Summary</a>
+    </button>
+  </footer>
 </html>
